[package]
name = "hcl-template"
version = "0.1.1"
edition = "2021"
description = "A simple wrapper around the `hcl` create to render HCL template strings."
license = "MIT"
repository = "https://github.com/NiklasRosenstein/hcl-template"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
hcl-rs = "0.16.3"
serde_yaml = "0.9.25"
